Fixed bug where on input cancel, button would not be visible disabled

--- a/css/style.css
+++ b/css/style.css
@@ -669,6 +669,7 @@ input[type="text"]:focus-visible {
 
 .disabled-button {
   background-color: var(--accent-light) !important;
+  cursor: not-allowed !important;
 }
 
 /* -------------------------- NEW TASK MODAL --------------------------*/
